log
Fri 15 Sep 2023 05:12:28 PM UTC: 
 tests:  1|8
total_score: 0/70
5e7d03c
Sat 16 Sep 2023 02:11:48 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
38769f8
Sat 16 Sep 2023 02:21:02 AM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:3: error: expected identifier before ‘return’
   46 |   return tree;
      |   ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eb35160
